skrevet om unleash til a bruke variant Co-authored-by: Mats Bolstad <mats.bolstad@nav.no>

--- a/src/test/resources/config/application-local.yaml
+++ b/src/test/resources/config/application-local.yaml
@@ -62,4 +62,6 @@ tiltaksgjennomforing:
   oppgave:
     oppgave-uri: http://localhost:8090/api/v1/oppgaver
   unleash:
+    #enabled: true
+    #unleash-uri: https://unleash.nais.io/api/
     mock: true
